--- a/src/Components/App/App.css
+++ b/src/Components/App/App.css
@@ -2,6 +2,7 @@ body,
 html,
 #root {
   height: 100%;
+  scroll-behavior: smooth;
 }
 
 html {
@@ -20,6 +21,7 @@ header {
   display: flex;
 }
 
+
 .App-header {
   background-color: #d9c4b2;
   min-height: 100vh;
@@ -30,20 +32,16 @@ header {
   justify-content: center;
   color: white;
   width: 70%;
-  border-radius: 0 20px 0 0;
+  border-radius: 0;
 }
 
-.App-side-header {
-  width: 30%;
-  /* border: 2px solid #FFF6A0; */
-  margin-top: 2.5rem;
-  background-color: blanchedalmond;
-  min-height: 90vh;
-  max-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+.logo{
+  width: 200px;
+  height: 200px;
+}
+
+h1 {
+  font-size: 5rem;
 }
 
 .App-header p{
@@ -53,30 +51,41 @@ header {
   margin: 0 auto;
   letter-spacing: .10em;
   animation:
-    typing 5s steps(40, end),
+    typing 3.5s steps(40, end),
     blink-caret .6s step-end infinite;
 }
 
 @keyframes typing {
   from {width: 0}
-  to { width: 50%}
+  to { width: 310px}
 }
+
 @keyframes blink-caret{
   from, to {border-color: transparent}
   50% { border-color: black}
 }
 
-h1 {
-  font-size: 5rem;
+.App-side-header {
+  width: 30%;
+  /* border: 2px solid #FFF6A0; */
+  /* margin-top: 2.5rem; */
+  background-color: #ffebcd;
+  min-height: 90vh;
+  max-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 button {
-  border-radius: 15px;
-  background-color: #FFF6A0;
-  border: none;
-  color: #d9c4b2;
+  border-radius: 25px;
+  background-color: #1F4071;
+  border: 2px solid #1F4071;
+  color: white;
   font-size: 1.5rem;
   padding: 0.6rem 1rem;
+  transition: 0.5s;
 }
 
 /* button:active {
@@ -84,8 +93,9 @@ button {
 } */
 
 button:hover {
-  background-color: #ffffff;
-  color: black;
+  background-color: transparent;
+  border-color: #1F4071;
+  color: #1F4071;
 }
 
 p {
@@ -104,15 +114,19 @@ p {
   width: 15%;
   height: 2rem;
   border-radius: 10px 10px 0 0;
+  margin: 0 1px;
 }
 
-.Statement {
+.Segment {
   display: flex;
   align-items: center;
   background-color: #d9c4b2;
   min-height: 90vh;
   max-height: 90vh;
+}
 
+.Statement-text {
+  margin: 0 8rem 0 4rem;
 }
 
 h2 {
