--- a/src/Components/Camera/Camera.css
+++ b/src/Components/Camera/Camera.css
@@ -1,7 +1,7 @@
 .Animate {
     transition: all 2s ease-in-out;
-    position: absolute;
-    right: 0;
+    position: relative;
+    right: 2rem;
     margin: 16%;
   }
   
